==> zirreal/altruist-firmware/sensors/drivers/SCD4x_Library/src/SparkFun_SCD4x_Arduino_Library.cpp <==
#include "SparkFun_SCD4x_Arduino_Library.h"
#include "driver/i2c.h"

bool SCD4x::begin(bool measBegin, bool autoCalibrate, bool skipStopPeriodicMeasurements, bool pollAndSetDeviceType) {

    bool success = true;


    if (!skipStopPeriodicMeasurements) {
        success &= stopPeriodicMeasurement();
    }


    char serialNumber[13];
    success &= getSerialNumber(serialNumber);

    Serial.print(F("Begin SCD4x serial number: "));
    Serial.println(serialNumber);

    if (pollAndSetDeviceType) {
        scd4x_sensor_type_e sensorType;
        success &= getFeatureSetVersion(&sensorType);
        setSensorType(sensorType);
    }

    if (autoCalibrate) {
        success &= setAutomaticSelfCalibrationEnabled(true);
        success &= (getAutomaticSelfCalibrationEnabled() == true);
    } else {
        success &= setAutomaticSelfCalibrationEnabled(false);
        success &= (getAutomaticSelfCalibrationEnabled() == false);
    }

    if (measBegin) {
        success &= startPeriodicMeasurement();
    }

    return success;
}

bool SCD4x::stopPeriodicMeasurement(uint16_t delayMillis) {
    uint8_t command[] = { 
        (uint8_t)(SCD4x_COMMAND_STOP_PERIODIC_MEASUREMENT >> 8),
        (uint8_t)(SCD4x_COMMAND_STOP_PERIODIC_MEASUREMENT & 0xFF) 
    };

    esp_err_t res = i2c_master_write_to_device(I2C_MASTER_NUM, SCD4x_ADDRESS, command, sizeof(command), I2C_MASTER_TIMEOUT_MS / portTICK_PERIOD_MS);
    
    if (res == ESP_OK) {
        periodicMeasurementsAreRunning = false;
        if (delayMillis > 0) vTaskDelay(delayMillis / portTICK_PERIOD_MS);
        return true;
    }
    return false;
}

bool SCD4x::readMeasurement() {
    if (!getDataReadyStatus()) return false;

    uint8_t command[] = {
        (uint8_t)(SCD4x_COMMAND_READ_MEASUREMENT >> 8),
        (uint8_t)(SCD4x_COMMAND_READ_MEASUREMENT & 0xFF)
    };

    uint8_t data[9];
    
    esp_err_t res = i2c_master_write_read_device(I2C_MASTER_NUM, SCD4x_ADDRESS, command, sizeof(command), data, sizeof(data), I2C_MASTER_TIMEOUT_MS / portTICK_PERIOD_MS);
    
    if (res != ESP_OK) return false;

    bool error = false;
    uint8_t bytesToCrc[2];

    for (int x = 0; x < 9; x++) {
        switch (x) {
            case 0:
            case 1:
                bytesToCrc[x] = data[x];
                break;
            case 3:
            case 4:
                bytesToCrc[x % 3] = data[x];
                break;
            case 6:
            case 7:
                bytesToCrc[x % 3] = data[x];
                break;
            default:
                if (computeCRC8(bytesToCrc, 2) != data[x]) error = true;
                break;
        }
    }

    if (error) return false;

    co2 = (float)((data[0] << 8) | data[1]);
    temperature = -45 + (((float)((data[3] << 8) | data[4])) * 175 / 65536);
    humidity = ((float)((data[6] << 8) | data[7])) * 100 / 65536;

    co2HasBeenReported = humidityHasBeenReported = temperatureHasBeenReported = false;

    return true;
}

float SCD4x::performForcedRecalibration(uint16_t concentration)
{
  if (periodicMeasurementsAreRunning)
  {
    #if SCD4x_ENABLE_DEBUGLOG
    if (_printDebug == true)
    {
      _debugPort->println(F("SCD4x::performForcedRecalibration: periodic measurements are running. Returning 0.0"));
    }
    #endif // if SCD4x_ENABLE_DEBUGLOG
    return (0.0);
  }

  float correction = 0.0;
  #if SCD4x_ENABLE_DEBUGLOG
  bool success = 
  #endif // if SCD4x_ENABLE_DEBUGLOG
  performForcedRecalibration(concentration, &correction);
  #if SCD4x_ENABLE_DEBUGLOG
  if ((success == false) && (_printDebug == true))
  {
    _debugPort->println(F("SCD4x::performForcedRecalibration: FRC failed"));
  }
  #endif // if SCD4x_ENABLE_DEBUGLOG
  return (correction);
}

bool SCD4x::performForcedRecalibration(uint16_t concentration, float *correction)
{
    if (periodicMeasurementsAreRunning)
    {
#if SCD4x_ENABLE_DEBUGLOG
        if (_printDebug == true)
        {
            _debugPort->println(F("SCD4x::performForcedRecalibration: periodic measurements are running. Aborting"));
        }
#endif
        return false;
    }

    uint16_t correctionWord;
    bool success = sendCommand(SCD4x_COMMAND_PERFORM_FORCED_CALIBRATION, concentration);

    if (!success)
        return false;

    vTaskDelay(pdMS_TO_TICKS(400)); // Datasheet specifies this delay

    uint8_t data[3];
    i2c_cmd_handle_t cmd = i2c_cmd_link_create();
    
    i2c_master_start(cmd);
    i2c_master_write_byte(cmd, (SCD4x_ADDRESS << 1) | I2C_MASTER_READ, true);
    i2c_master_read(cmd, data, 2, I2C_MASTER_ACK);  // Read first 2 bytes (correction word)
    i2c_master_read_byte(cmd, &data[2], I2C_MASTER_NACK); // Read CRC
    i2c_master_stop(cmd);

    esp_err_t ret = i2c_master_cmd_begin(I2C_NUM_0, cmd, 1000 / portTICK_PERIOD_MS);
    i2c_cmd_link_delete(cmd);

    if (ret != ESP_OK)
    {
#if SCD4x_ENABLE_DEBUGLOG
        if (_printDebug == true)
        {
            _debugPort->println(F("SCD4x::performForcedRecalibration: I2C read error"));
        }
#endif
        return false;
    }

    uint8_t foundCrc = computeCRC8(data, 2);
    if (foundCrc != data[2])
    {
#if SCD4x_ENABLE_DEBUGLOG
        if (_printDebug == true)
        {
            _debugPort->print(F("SCD4x::performForcedRecalibration: CRC error. Expected 0x"));
            _debugPort->print(foundCrc, HEX);
            _debugPort->print(F(", got 0x"));
            _debugPort->println(data[2], HEX);
        }
#endif
        return false;
    }

    correctionWord = ((uint16_t)data[0] << 8) | data[1];
    *correction = ((float)correctionWord) - 32768; // FRC correction [ppm CO2] = word[0] – 0x8000

    if (correctionWord == 0xFFFF) // A return value of 0xFFFF indicates failure
        return false;

    return true;
}

bool SCD4x::getSerialNumber(char *serialNumber) {
    uint8_t command[] = { 
        (uint8_t)(SCD4x_COMMAND_GET_SERIAL_NUMBER >> 8), 
        (uint8_t)(SCD4x_COMMAND_GET_SERIAL_NUMBER & 0xFF) 
    };

    uint8_t data[9];
    
    esp_err_t res = i2c_master_write_read_device(I2C_MASTER_NUM, SCD4x_ADDRESS, command, sizeof(command), data, sizeof(data), I2C_MASTER_TIMEOUT_MS / portTICK_PERIOD_MS);
    
    if (res != ESP_OK) return false;

    bool error = false;
    uint8_t bytesToCrc[2];
    int digit = 0;

    for (int x = 0; x < 9; x++) {
        switch (x) {
            case 0:
            case 1:
            case 3:
            case 4:
            case 6:
            case 7:
                serialNumber[digit++] = convertHexToASCII(data[x] >> 4);
                serialNumber[digit++] = convertHexToASCII(data[x] & 0x0F);
                bytesToCrc[x % 3] = data[x];
                break;
            default:
                if (computeCRC8(bytesToCrc, 2) != data[x]) error = true;
                break;
        }
    }

    serialNumber[digit] = 0;

    return !error;
}

bool SCD4x::readRegister(uint16_t registerAddress, uint16_t *response, uint16_t delayMillis) {
    uint8_t command[] = { 
        (uint8_t)(registerAddress >> 8), 
        (uint8_t)(registerAddress & 0xFF) 
    };

    uint8_t data[3];

    esp_err_t res = i2c_master_write_read_device(I2C_MASTER_NUM, SCD4x_ADDRESS, command, sizeof(command), data, sizeof(data), I2C_MASTER_TIMEOUT_MS / portTICK_PERIOD_MS);

    if (res != ESP_OK) return false;

    *response = (data[0] << 8) | data[1];

    return (computeCRC8(data, 2) == data[2]);
}
