==> pchwalek/STM32_SCD4x/SparkFun_SCD4x_Arduino_Library.cpp <==
#include "SparkFun_SCD4x_Arduino_Library.h"

bool SCD4x::begin(uint8_t i2c_address, I2C_HandleTypeDef *i2c_handle,
		 bool measBegin, bool autoCalibrate, bool skipStopPeriodicMeasurements)
{
	i2c_han = i2c_handle;
	i2c_addr = i2c_address;

  bool success = true;

  //If periodic measurements are already running, getSerialNumber will fail...
  //To be safe, let's stop period measurements before we do anything else
  //The user can override this by setting skipStopPeriodicMeasurements to true
  if (skipStopPeriodicMeasurements == false)
    success &= stopPeriodicMeasurement(); // Delays for 500ms...

  char serialNumber[13]; // Serial number is 12 digits plus trailing NULL
  success &= getSerialNumber(serialNumber); // Read the serial number. Return false if the CRC check fails.
  if (success == false)
    return (false);

  if (_printDebug == true)
  {

  }

  if (autoCalibrate == true) // Must be done before periodic measurements are started
  {
    success &= setAutomaticSelfCalibrationEnabled(true);
    success &= (getAutomaticSelfCalibrationEnabled() == true);
  }
  else
  {
    success &= setAutomaticSelfCalibrationEnabled(false);
    success &= (getAutomaticSelfCalibrationEnabled() == false);
  }

  if (measBegin == true)
  {
    success &= startPeriodicMeasurement();
  }

  return (success);
}

bool SCD4x::stopPeriodicMeasurement(uint16_t delayMillis, I2C_HandleTypeDef *i2c_handle)
{

  uint8_t data[2];
	data[0] = SCD4x_COMMAND_STOP_PERIODIC_MEASUREMENT >> 8;
	data[1] = SCD4x_COMMAND_STOP_PERIODIC_MEASUREMENT & 0xFF;
	bool i2cResult = write(data,2);

  if (i2cResult)
  {
    periodicMeasurementsAreRunning = false;
    if (delayMillis > 0)
      HAL_Delay(delayMillis);
    return(true);
  }

  if (_printDebug == true)
  {
    //_debugPort->println(F("SCD4x::stopPeriodicMeasurement: I2C error: "));
    //_debugPort->println(i2cResult);
  }
  return (false);
}

bool SCD4x::readMeasurement(void)
{
  //Verify we have data from the sensor
  if (getDataReadyStatus() == false)
    return (false);

  scd4x_unsigned16Bytes_t tempCO2;
  tempCO2.unsigned16 = 0;
  scd4x_unsigned16Bytes_t  tempHumidity;
  tempHumidity.unsigned16 = 0;
  scd4x_unsigned16Bytes_t  tempTemperature;
  tempTemperature.unsigned16 = 0;


  uint8_t data[10];
	data[0] = SCD4x_COMMAND_READ_MEASUREMENT >> 8;
	data[1] = SCD4x_COMMAND_READ_MEASUREMENT & 0xFF;
	if(!write(data,2)){
		return (false); //Sensor did not ACK
	}


	HAL_Delay(1); //Datasheet specifies this

//  uint8_t receivedBytes = (uint8_t)_i2cPort->requestFrom((uint8_t)SCD4x_ADDRESS, (uint8_t)9);
  bool read_status = read(data,9); // read 9 bytes
  bool error = false;
  if (read_status)
  {
    uint8_t bytesToCrc[2];
    for (uint8_t x = 0; x < 9; x++)
    {
      uint8_t incoming = data[(uint8_t) x];

      switch (x)
      {
      case 0:
      case 1:
        tempCO2.bytes[x == 0 ? 1 : 0] = incoming; // Store the two CO2 bytes in little-endian format
        bytesToCrc[x] = incoming; // Calculate the CRC on the two CO2 bytes in the order they arrive
        break;
      case 3:
      case 4:
        tempTemperature.bytes[x == 3 ? 1 : 0] = incoming; // Store the two T bytes in little-endian format
        bytesToCrc[x % 3] = incoming; // Calculate the CRC on the two T bytes in the order they arrive
        break;
      case 6:
      case 7:
        tempHumidity.bytes[x == 6 ? 1 : 0] = incoming; // Store the two RH bytes in little-endian format
        bytesToCrc[x % 3] = incoming; // Calculate the CRC on the two RH bytes in the order they arrive
        break;
      default: // x == 2, 5, 8
        //Validate CRC
        uint8_t foundCrc = computeCRC8(bytesToCrc, 2); // Calculate what the CRC should be for these two bytes
        if (foundCrc != incoming) // Does this match the CRC byte from the sensor?
        {
          if (_printDebug == true)
          {
            //_debugPort->println(F("SCD4x::readMeasurement: found CRC in byte "));
            //_debugPort->println(x);
            //_debugPort->println(F(", expected 0x"));
            //_debugPort->println(foundCrc, HEX);
            //_debugPort->println(F(", got 0x"));
            //_debugPort->println(incoming, HEX);
          }
          error = true;
        }
        break;
      }
    }
  }
  else
  {
    if (_printDebug == true)
    {
      //_debugPort->println(F("SCD4x::readMeasurement: no SCD4x data found from I2C, I2C claims we should receive "));
      //_debugPort->println(receivedBytes);
      //_debugPort->println(F(" bytes"));
    }
    return (false);
  }

  if (error)
  {
    if (_printDebug == true)
      //_debugPort->println(F("SCD4x::readMeasurement: encountered error reading SCD4x data."));
    return (false);
  }
  //Now copy the int16s into their associated floats
  co2 = (float)tempCO2.unsigned16;
  temperature = -45 + (((float)tempTemperature.unsigned16) * 175 / 65536);
  humidity = ((float)tempHumidity.unsigned16) * 100 / 65536;

  //Mark our global variables as fresh
  co2HasBeenReported = false;
  humidityHasBeenReported = false;
  temperatureHasBeenReported = false;

  return (true); //Success! New data available in globals.
}

float SCD4x::performForcedRecalibration(uint16_t concentration)
{
  if (periodicMeasurementsAreRunning)
  {
    if (_printDebug == true)
    {
      //_debugPort->println(F("SCD4x::performForcedRecalibration: periodic measurements are running. Returning 0.0"));
    }
    return (0.0);
  }

  float correction = 0.0;
  bool success = performForcedRecalibration(concentration, &correction);
  if ((success == false) && (_printDebug == true))
  {
    //_debugPort->println(F("SCD4x::performForcedRecalibration: FRC failed"));
  }
  return (correction);
}

bool SCD4x::performForcedRecalibration(uint16_t concentration, float *correction)
{
  if (periodicMeasurementsAreRunning)
  {
    if (_printDebug == true)
    {
      //_debugPort->println(F("SCD4x::performForcedRecalibration: periodic measurements are running. Aborting"));
    }
    return (false);
  }

  uint16_t correctionWord;

  bool success = sendCommand(SCD4x_COMMAND_PERFORM_FORCED_CALIBRATION, concentration);

  if (success == false)
    return (false);

  HAL_Delay(400); //Datasheet specifies this

//  uint8_t receivedBytes = (uint8_t)_i2cPort->requestFrom((uint8_t)SCD4x_ADDRESS, (uint8_t)3);
  uint8_t data[10];
  bool read_state = read(data,3);
  bool error = false;
  if (read_state)
  {
    uint8_t bytesToCrc[2];
    bytesToCrc[0] = data[0];
    correctionWord = ((uint16_t)bytesToCrc[0]) << 8;
    bytesToCrc[1] = data[1];
    correctionWord |= (uint16_t)bytesToCrc[1];
    uint8_t incomingCrc = data[2];
    uint8_t foundCrc = computeCRC8(bytesToCrc, 2);
    if (foundCrc != incomingCrc)
    {
      if (_printDebug == true)
      {
        //_debugPort->println(F("SCD4x::performForcedRecalibration: CRC error. Expected 0x"));
        //_debugPort->println(foundCrc, HEX);
        //_debugPort->println(F(", got 0x"));
        //_debugPort->println(incomingCrc, HEX);
      }
      error = true;
    }
  }
  else
  {
    if (_printDebug == true)
    {
      //_debugPort->println(F("SCD4x::performForcedRecalibration: no SCD4x data found from I2C, I2C claims we should receive "));
      //_debugPort->println(receivedBytes);
      //_debugPort->println(F(" bytes"));
    }
    return (false);
  }

  if (error)
  {
    if (_printDebug == true)
      //_debugPort->println(F("SCD4x::performForcedRecalibration: encountered error reading SCD4x data."));
    return (false);
  }

  *correction = ((float)correctionWord) - 32768; // FRC correction [ppm CO2] = word[0] – 0x8000

  if (correctionWord == 0xffff) //A return value of 0xffff indicates that the forced recalibration has failed
    return (false);
  
  return (true);
}

bool SCD4x::getSerialNumber(char *serialNumber)
{
  if (periodicMeasurementsAreRunning)
  {
    if (_printDebug == true)
    {
      //_debugPort->println(F("SCD4x::getSerialNumber: periodic measurements are running. Aborting"));
    }
    return (false);
  }

  uint8_t data[10];
	data[0] = SCD4x_COMMAND_GET_SERIAL_NUMBER >> 8;
	data[1] = SCD4x_COMMAND_GET_SERIAL_NUMBER & 0xFF;
	if(!write(data,2)){
		return (false); //Sensor did not ACK
	}

  HAL_Delay(1); //Datasheet specifies this

  bool read_state = read(data,9);
	bool error = false;

  if (read_state)
  {
    uint8_t bytesToCrc[2];
    int digit = 0;
    for (uint8_t x = 0; x < 9; x++)
    {
      uint8_t incoming = data[(uint8_t)x];

      switch (x)
      {
      case 0: // The serial number arrives as: two bytes, CRC, two bytes, CRC, two bytes, CRC
      case 1:
      case 3:
      case 4:
      case 6:
      case 7:
        serialNumber[digit++] = convertHexToASCII(incoming >> 4); // Convert each nibble to ASCII
        serialNumber[digit++] = convertHexToASCII(incoming & 0x0F);
        bytesToCrc[x % 3] = incoming;
        break;
      default: // x == 2, 5, 8
        //Validate CRC
        uint8_t foundCrc = computeCRC8(bytesToCrc, 2); // Calculate what the CRC should be for these two bytes
        if (foundCrc != incoming) // Does this match the CRC byte from the sensor?
        {
          if (_printDebug == true)
          {
            //_debugPort->println(F("SCD4x::readSerialNumber: found CRC in byte "));
            //_debugPort->println(x);
            //_debugPort->println(F(", expected 0x"));
            //_debugPort->println(foundCrc, HEX);
            //_debugPort->println(F(", got 0x"));
            //_debugPort->println(incoming, HEX);
          }
          error = true;
        }
        break;
      }
      serialNumber[digit] = 0; // NULL-terminate the string
    }
  }
  else
  {
    if (_printDebug == true)
    {
      //_debugPort->println(F("SCD4x::readSerialNumber: no SCD4x data found from I2C, I2C claims we should receive "));
      //_debugPort->println(receivedBytes);
      //_debugPort->println(F(" bytes"));
    }
    return (false);
  }

  if (error)
  {
    if (_printDebug == true)
      //_debugPort->println(F("SCD4x::readSerialNumber: encountered error reading SCD4x data."));
    return (false);
  }

  return (true); //Success!
}

bool SCD4x::readRegister(uint16_t registerAddress, uint16_t *response, uint16_t delayMillis)
{
  uint8_t data[3];
  data[0] = registerAddress >> 8;
	data[1] = registerAddress & 0xFF;
	if(!write(data,2)){
		return (false); //Sensor did not ACK
	}

  HAL_Delay(delayMillis);

  bool read_state = read(data, 3);
  if (read_state)
  {
    uint8_t crc = data[2];
    *response = (uint16_t)data[0] << 8 | data[1];
    uint8_t expectedCRC = computeCRC8(data, 2);
    if (crc == expectedCRC) // Return true if CRC check is OK
      return (true);
    if (_printDebug == true)
    {
      //_debugPort->println(F("SCD4x::readRegister: CRC fail: expected 0x"));
      //_debugPort->println(expectedCRC, HEX);
      //_debugPort->println(F(", got 0x"));
      //_debugPort->println(crc, HEX);
    }
  }
  return (false);
}

bool SCD4x::readRegister(uint16_t mem_addr, uint8_t *dest,
		uint16_t size) {
	if (HAL_OK
			== HAL_I2C_Mem_Read(i2c_han, i2c_addr, mem_addr, 1, dest, size, 10)) {
		return true;
	} else {
		return false;
	}
}
